cmake_minimum_required(VERSION 3.10)
project(p10)

set(CMAKE_CXX_STANDARD 11)

add_executable(p10 main.cpp p509.h h70.h p746.h p62.h "p63 路径规划 有障碍物.h" p343.h p96.h "p 01背包的基础代码.h" p416.h p1049.h "h494 目标和.h" "h474 1 和 0.h" "p518 多重背包 找硬币问题.h" "h377 组合问题.h" "p70 多重背包爬楼梯问题.h" "p322 找零问题.h" p279.h "p139 单词拆分问题.h" "p198 打家劫舍.h" "p231 继续打家劫舍.h" "h337 树形DP 打家劫舍3.h" "p121 买卖股票1.h" "p122 买卖股票2.h" "p121 买卖股票1 动态规划.h" "p122 Dp 买卖股票2.h" "h 300.h" p674.h "h718 最长重复子数组.h" "h1143 最长公共子序列.h" p1035.h "p53 最大子数组和 .h" p718.h h115.h h583.h h72.h "h647 回文串.h" "h516 回文2.h" "h188 买卖多次股票.h")
