cmake_minimum_required(VERSION 3.10)
project(p11_Offer_mid)

set(CMAKE_CXX_STANDARD 11)

add_executable(p11_Offer_mid main.cpp p09.h "h30 min_stack.h" "p06 从头到尾打印链表.h" "p24 翻转链表.h" "h35 复制复杂链表.h" day3.h "day 04.h" "day 05.h" "day 06.h" "day07 .h" "day 08.h" day09.h "day 10.h" "day11 .h" "day 12.h" day13.h "day 14.h" "day 15.h" "day 16.h" 排序.h "day 17.h" "day 18.h")
