cmake_minimum_required(VERSION 3.21)
project(p7)

set(CMAKE_CXX_STANDARD 11)

add_executable(p7 main.cpp p94.h p144.h p145.h p144迭代法.h p94迭代法中序遍历.h p145后序遍历迭代法.h "p94 迭代法的统一写法.h" p102.h p107.h p199.h p637.h p429-n叉树层次遍历.h "p515-层次遍历 最大值.h" p116-层次遍历填充.h p117.h "p104 二叉树最大深度.h" "p111 最小深度.h" "p226 反转二叉树.h" "h101 对称二叉树.h" "p104 二叉树深度 递归.h")
