cmake_minimum_required(VERSION 3.21)
project(p7)

set(CMAKE_CXX_STANDARD 11)

add_executable(p7 main.cpp p94.h p144.h p145.h p144迭代法.h p94迭代法中序遍历.h p145后序遍历迭代法.h "p94 迭代法的统一写法.h" p102.h p107.h p199.h p637.h p429-n叉树层次遍历.h "p515-层次遍历 最大值.h" p116-层次遍历填充.h p117.h "p104 二叉树最大深度.h" "p111 最小深度.h" "p226 反转二叉树.h" "h101 对称二叉树.h" "p104 二叉树深度 递归.h" "p 559 n叉树 递归求深度.h" "p222 递归 节点个数.h" "p110 二叉树是否平衡.h" "p110 递归写法 一个递归函数.h" "h257 回溯 求所有节点路径.h" "p110 平衡二叉树 递归.h" "p100 两棵相同的树吗.h" "h572 一棵树是否是另外一棵树子树 递归.h" "h111 最小深度 递归.h" "h257 查找所有路径  递归+回溯.h" "p404 所有左叶子节点的值 递归.h" "p513 最左侧叶子节点.h" "p513 找到最左侧子结点 递归.h" "p112 路径总和.h" "p112 路径求和.h" "p106 构造二叉树 后序中序.h" "p105 构造二叉树 先序与中序.h" "p654 递归构造最大二叉树.h" "p617 合成二叉树.h" "p700 搜索二叉树.h" "p98 验证是否是搜索二叉树.h" h530.h "h530 二叉树最小差值 递归 前节点.h" "p501 搜索二叉树的众数.h" "h 501 二叉树众数 map的value怎么排序.h" "p236 公共祖先.h" "h236 递归 二叉树两个节点的祖先节点.h" "h235 搜索二叉树的公共祖先.h")
